reports/chapter-1.log
Traceback (most recent call last):
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import schemdraw
import schemdraw.elements as elm
from schemdraw.segments import *

schemdraw.config(lw=1, font='times')

with schemdraw.Drawing(file='ohms-law-example-1.svg') as d:
    d += (R1 := elm.Resistor().down().label('$1k \Omega$')label('$8V$', loc='right').label('$-2V$', loc='left'))
    d += elm.Dot(open=True).at(R1.start)
    d += elm.Dot(open=True).at(R1.end)
------------------

[0;36m  File [0;32m"/var/folders/65/qy_bbqpj2x3470cgr0fmhyc40000gn/T/ipykernel_49192/3834403011.py"[0;36m, line [0;32m8[0m
[0;31m    d += (R1 := elm.Resistor().down().label('$1k \Omega$')label('$8V$', loc='right').label('$-2V$', loc='left'))[0m
[0m                                                          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (3834403011.py, line 8)

